20250708 匹配九格大模型api更新

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
       <link rel="icon" href="./src/assets/image/publicLogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>九源社区</title>
+    <title>九格大模型</title>
   </head>
   <body>
     <div id="app"></div>
